--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Word War GRE</title>
+    <link rel="icon" type="image/png" href="star.png">
     <!-- Tailwind CSS CDN for quick styling -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Google Font for minimalistic pixelated look -->
@@ -371,7 +372,7 @@
     <audio id="correct-sound"><source src="correct.mp3" type="audio/mpeg"></audio>
     <audio id="wrong-sound"><source src="Error - Sound Effect Non copyright sound effe....mp3" type="audio/mpeg"></audio>
 
-    <div class="top-scorers-container text-center mb-2" style="position: relative; top: -7px;">
+    <div class="top-scorers-container text-center mb-2" style="position: relative; top: -9px;">
         <div id="highest-scorer-overall-display" class="text-sm text-white hidden">Loading top scorer...</div>
         <div id="untimed-highest-scorer-display" class="text-sm text-white hidden">Loading top untimed scorer...</div>
     </div>
